--- a/initcon.yaml
+++ b/initcon.yaml
@@ -10,7 +10,14 @@ spec:
       ports: 
         - containerPort: 80
   initContainers: 
-    - command:
+    - name: delay
+      image: alpine 
+      command:
+        - sleep 
+        - 10s
+    - name: init-myservice
+      image: busybox:1.28
+      command:
         - "sh"
         - "-c"
         - "until nslookup init-svc.default.svc.cluster.local; do echo waiting for myservice; sleep 2; done"
