--- a/svc-check.yaml
+++ b/svc-check.yaml
@@ -3,12 +3,11 @@ apiVersion: v1
 kind: Service
 metadata: 
   name: svc-nginx
-  labels: 
-    app: nginx
-    layer: app 
-selector:
-  app: nginx 
-ports: 
-  - port: 80
-  - targetPort: 80
-type: ClusterIP
+spec: 
+  ports:
+    - name: nginx 
+      port: 80 
+      targetPort: 80  
+  selector:
+    app: nginx 
+  type: ClusterIP
