--- a/deployment.yaml
+++ b/deployment.yaml
@@ -12,10 +12,10 @@ spec:
     matchLabels: 
       app: nginx 
   strategy: 
-    type: rollingUpdate
     rollingUpdate: 
       maxSurge: 25% 
-      maxUnavailable: 25% 
+      maxUnavailable: 25%
+    type: RollingUpdate
   template: 
     metadata: 
       name: nginx 
