--- a/deployment.yaml
+++ b/deployment.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment 
 metadata: 
   name: deploy-nginx 
-  Annotations:
+  annotations:
     kubernetes.io/change-cause: "updated to httpd"
   labels:
     app: deploy-nginx 
