--- a/DeamonSet.yaml
+++ b/DeamonSet.yaml
@@ -3,6 +3,8 @@ apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   name: deamon-set
+  annotations:
+    kubernetes.io/change-cause: "fluentd"
   labels: 
     app: fluentd
 spec:  
